
* Attribute "trace_locales" activates tracing of locale instances during
roundup. It replaces the diagnostic command 'print_dependencies', which
has been discontinued.


*** Isabelle/jEdit Prover IDE ***

* Actions isabelle.tooltip (CS+b) and isabelle.message (CS+m) display
tooltip message popups, corresponding to mouse hovering with/without the
CONTROL/COMMAND key pressed.

* Prover IDE startup is now much faster, because theory dependencies are
no longer explored in advance. The overall session structure with its
declarations of 'directories' is sufficient to locate theory files. Thus
the "session focus" of option "isabelle jedit -S" has become obsolete
(likewise for "isabelle vscode_server -S"). Existing option "-R" is both
sufficient and more convenient to start editing a particular session.

* Support more brackets: \<llangle> \<rrangle> (intended for implicit argument syntax).


*** Isabelle/VSCode Prover IDE ***

* Update of State and Preview panels to use new WebviewPanel API of
VSCode.


*** HOL ***

* Improvements of the 'lift_bnf' command:
  - Add support for quotient types.
  - Generate transfer rules for the lifted map/set/rel/pred constants
    (theorems "<type>.<constant>_transfer_raw").

* Term_XML.Encode/Decode.term uses compact representation of Const
"typargs" from the given declaration environment. This also makes more
sense for translations to lambda-calculi with explicit polymorphism.
INCOMPATIBILITY, use Term_XML.Encode/Decode.term_raw in special
applications.

* ASCII membership syntax concerning big operators for infimum and
supremum has been discontinued. INCOMPATIBILITY.

* Clear distinction between types for bits (False / True) and Z2 (0 /
1): theory HOL-Library.Bit has been renamed accordingly.
INCOMPATIBILITY.

* Dynamic facts "algebra_split_simps" and "field_split_simps" correspond
to algebra_simps and field_simps but contain more aggressive rules
potentially splitting goals; algebra_split_simps roughly replaces